--- a/fazendas/templates/fazendas/fazenda_detalhe.html
+++ b/fazendas/templates/fazendas/fazenda_detalhe.html
@@ -12,6 +12,6 @@
 
     <h2>Últimos posts</h2>
     <p>Aqui vão aparecer os posts do feed (ainda não implementados).</p>
-    <p><a href="{% url 'rumix:feed_lista' %}">Ver feed completo</a></p>
+    <p><a href="{% url 'fazenda:lista' %}">Ver feed completo</a></p>
   </section>
 {% endblock %}
