--- a/rumix/templates/rumix/perfil.html
+++ b/rumix/templates/rumix/perfil.html
@@ -1,16 +1,10 @@
 {% extends "rumix/base.html" %}
 {% load static %}
-
-{% block title %}{{ titulo }}{% endblock %}
+{% block title %}Perfil - Rumix{% endblock %}
 
 {% block content %}
   <section style="text-align:center; padding:2rem;">
     <h1>{{ titulo }}</h1>
-   
-
-    <hr style="margin:2rem 0;">
-
-    
-    
+    <hr style="margin:2rem 0;">  
   </section>
 {% endblock %}
