--- a/rumix/templates/rumix/sobre.html
+++ b/rumix/templates/rumix/sobre.html
@@ -1,15 +1,10 @@
 {% extends "rumix/base.html" %}
 {% load static %}
-
-{% block title %}{{ titulo }}{% endblock %}
-
+{% block title %}Sobre - Rumix{% endblock %}
 {% block content %}
   <section style="text-align:center; padding:2rem;">
     <h1>{{ titulo }}</h1>
     <p style="max-width:900px; margin:0 auto;">{{ descricao }}</p>
-
-    <hr style="margin:2rem 0;">
-
-    
+    <hr style="margin:2rem 0;">   
   </section>
 {% endblock %}
