--- a/animais/templates/animais/animais_lista.html
+++ b/animais/templates/animais/animais_lista.html
@@ -1,15 +1,38 @@
 {% extends "rumix/base.html" %}
-{% load static %}
-{% block title %}{{ titulo }}{% endblock %}
+{% load crispy_forms_filters %}
+{% block title %}Lista de Animais/Adicionar - Rumix{% endblock %}
 {% block content %}
-  <section style="text-align:center; padding:2rem;">
-    <h1>{{ titulo }}</h1>
-    <p style="max-width:900px; margin:0 auto;">{{ descricao }}</p>
-
-    <hr style="margin:2rem 0;">
-
-    <h2>Últimos posts</h2>
-    <p>Aqui vão aparecer os posts do feed (ainda não implementados).</p>
-    <p><a href="{% url 'animais:lista' %}">Ver feed completo</a></p>
-  </section>
+<h1>{{ titulo }}</h1>
+<a href="{% url 'animais:cadastrar' %}" class="btn btn-success mb-3">Cadastrar Novo Animal</a>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>ID do Animal</th>
+      <th>Nome</th>
+      <th></th>
+      <th>Gênero</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for animal in object_list %}
+    <tr>
+      <td>{{ animal.identificacao_animal }}</td>
+      <td>{{ animal.nome_animal }}</td>
+      <td>{{ animal.especie_animal.nome }}</td>
+      <td>{{ animal.get_genero_animal_display }}</td>
+      <td>
+        <a href="{% url 'animais:detalhe' animal.id %}" class="btn btn-primary btn-sm">Detalhe</a>
+        <a href="{% url 'animais:editar' animal.id %}" class="btn btn-warning btn-sm">Editar</a>
+        <a href="{% url 'animais:excluir' animal.id %}" class="btn btn-danger btn-sm">Excluir</a>
+      </td>
+    </tr>
+    {% empty %}
+    <tr><td colspan="5" class="text-center">Nenhum animal cadastrado.</td></tr>
+    {% endfor %}
+  </tbody>
+</table>
+<div>
+  <a href="{% url 'rumix:index'%}" class="btn btn-primary btn-sm">Voltar para início</a>
+</div>
 {% endblock %}
