--- a/rumix/templates/rumix/base.html
+++ b/rumix/templates/rumix/base.html
@@ -1,33 +1,33 @@
 {% load static %}
+{% load crispy_forms_filters %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}Rumix{% endblock %}</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body class="d-flex flex-column min-vh-100">
-
 <header>
-  <nav class="navbar cima">
-    <div class="container-fluid col-10 d-flex align-items-center justify-content-between">
-      <a class="brand" href="{% url 'rumix:index' %}">
+  <nav class="navbar navbar-expand-lg navbar-dark p-3 shadow-sm">
+    <div class="container">
+      <a class="brand d-flex align-items-center" href="{% url 'rumix:index' %}">
         <span class="logo">R</span>
-        <span class="title">Rumix</span>
+        <span class="title ms-2">Rumix</span>
       </a>
-
-      <div class="collapse d-lg-block" id="navegacao">
-        <ul class="nav align-items-center">
-          <li><a href="{% url 'rumix:index' %}">Início</a></li>
-          <li><a href="{% url 'animais:lista' %}">Animais</a></li>
-          <li><a href="{% url 'fazendas:lista' %}">Fazendas</a></li>
-          <li><a href="{% url 'rumix:sobre' %}">Sobre</a></li>
-
-          <li class="nav-item dropdown ms-2">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navegacao">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navegacao">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item"><a class="nav-link" href="{% url 'rumix:index' %}"><i class="fa-solid fa-house me-1"></i>Início</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'animais:lista' %}"><i class="fa-solid fa-cow me-1"></i>Animais</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'fazendas:lista' %}"><i class="fa-solid fa-tractor me-1"></i>Fazendas</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'rumix:sobre' %}"><i class="fa-solid fa-handshake me-1"></i>Sobre</a></li>
+          <li class="nav-item dropdown ms-3">
             <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-bs-toggle="dropdown">
               <i class="fa-solid fa-user"></i>
             </a>
@@ -46,20 +46,17 @@
     </div>
   </nav>
 </header>
-
-<main class="flex-fill">
-  <div class="container-fluid col-10 py-4">
+<main class="flex-fill py-5 bg-light">
+  <div class="container">
     {% block content %}{% endblock %}
   </div>
 </main>
-
-<footer class="footer mt-auto">
-  <div class="container d-flex justify-content-between py-3">
-    <div>Rumix</div>
-    <div class="texto detalhe"><p><small>Feito por JP, MF, GS</small></p></div>
+<footer class="footer mt-auto py-3 bg-success text-white">
+  <div class="container d-flex justify-content-between">
+    <span>Rumix</span>
+    <small>Feito por JP, MF, GS</small>
   </div>
 </footer>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
