--- a/rumix/templates/rumix/index.html
+++ b/rumix/templates/rumix/index.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-md-5 mt-4 mt-md-0 text-center">
-      <img src="{% static 'images/hero-farm.jpg' %}" alt="Fazenda" class="img-fluid rounded shadow" style="max-height:250px; object-fit:cover;">
+      <img src="{% static 'css/images/fazenda.png' %}" alt="Fazenda" class="img-fluid rounded shadow" style="max-height:250px; object-fit:cover;">
     </div>
   </div>
 </div>
