--- a/rumix/templates/rumix/sobre.html
+++ b/rumix/templates/rumix/sobre.html
@@ -7,4 +7,20 @@
     <p style="max-width:900px; margin:0 auto;">{{ descricao }}</p>
     <hr style="margin:2rem 0;">   
   </section>
+  <section class="contato">
+    <h2>Contato</h2>
+    <ul>
+
+        <i class="bi bi-envelope-fill me-2"></i>Email: <a href="mailto:rumixcontato@gmail.com">rumixcontato@gmail.com</a>
+        <br>
+
+        <i class="bi bi-instagram"></i>
+            Instagram: <a href="https://www.instagram.com/rumixadmrural/" target="_blank">@rumixadmrural</a>
+      <br>
+
+        <i class="bi bi-github">
+        </i>    Github: <a href="https://github.com/MatheusFabSouza/Rumix" target="_blank">Github </a>
+        <br>
+    </ul>
+    </section>
 {% endblock %}
