--- a/rumix/templates/rumix/base.html
+++ b/rumix/templates/rumix/base.html
@@ -9,14 +9,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark p-3 shadow-sm">
     <div class="container">
-      <a class="brand d-flex align-items-center" href="{% url 'rumix:index' %}">
-        <span class="logo">R</span>
-        <span class="title ms-2">Rumix</span>
+      <a class="navbar-brand d-flex align-items-center" href="{% url 'rumix:index' %}">  
+        <img src="{% static 'css/images/logo.png' %}" alt="Logo Rumix" width="53" height="53" class="me-2"> 
+        <span class="title">Rumix</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navegacao">
         <span class="navbar-toggler-icon"></span>
