--- a/rumix/templates/rumix/sobre.html
+++ b/rumix/templates/rumix/sobre.html
@@ -2,25 +2,48 @@
 {% load static %}
 {% block title %}Sobre - Rumix{% endblock %}
 {% block content %}
+
   <section style="text-align:center; padding:2rem;">
     <h1>{{ titulo }}</h1>
-    <p style="max-width:900px; margin:0 auto;">{{ descricao }}</p>
-    <hr style="margin:2rem 0;">   
+       
+  </section>
+  <section>
+  <p>
+    O Rumix é uma plataforma digital voltada ao meio rural, criada para conectar agricultores e pessoas interessadas no setor agrário.
+    <br>
+    Funciona como uma espécie de rede social rural, oferecendo ferramentas para compartilhamento de experiências, gestão de propriedades, compra e venda de produtos e realização de leilões.
+    <br>
+    <br>
+    Funcionalidades Principais:
+    <br>
+    <br>
+    Animais: cadastro e gerenciamento.
+    Fazenda: administração de propriedades.
+    Perfil: edição de informações e interação entre usuários.
+    Sobre: informações da equipe e do projeto.
+    <br>
+    O objetivo é Promover a inclusão digital no setor rural, aproximando agricultores das inovações tecnológicas e oferecendo uma solução simples e prática para comunicação, gestão e comércio.
+  </p>
+  <p style="max-width:900px; margin:0 auto;">{{ descricao }}</p>
+    <hr style="margin:2rem 0;">
   </section>
   <section class="contato">
-    <h2>Contato</h2>
-    <ul>
+    <center>
+        <h2>Contato</h2>
+          <ul >
 
-        <i class="bi bi-envelope-fill me-2"></i>Email: <a href="mailto:rumixcontato@gmail.com">rumixcontato@gmail.com</a>
-        <br>
+            <i class="bi bi-envelope-fill me-2">
+            </i>Email: <a href="mailto:rumixcontato@gmail.com">rumixcontato@gmail.com</a>
+              <br>
 
-        <i class="bi bi-instagram"></i>
-            Instagram: <a href="https://www.instagram.com/rumixadmrural/" target="_blank">@rumixadmrural</a>
-      <br>
+            <i class="bi bi-instagram">
+            </i>Instagram: <a href="https://www.instagram.com/rumixadmrural/" target="_blank">@rumixadmrural</a>
+              <br>
 
-        <i class="bi bi-github">
-        </i>    Github: <a href="https://github.com/MatheusFabSouza/Rumix" target="_blank">Github </a>
-        <br>
-    </ul>
+            <i class="bi bi-github">
+            </i>    Github: <a href="https://github.com/MatheusFabSouza/Rumix" target="_blank">Github </a>
+            <br>
+          </ul>
+      </center>
     </section>
 {% endblock %}
