--- a/animais/templates/animais/detalhe.html
+++ b/animais/templates/animais/detalhe.html
@@ -1,6 +1,6 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_filters %}
-{% block title %}{{ animal.nome_animal }} — Rumix{% endblock %}
+{% block title %}{{ animal.nome_animal }} | Rumix{% endblock %}
 {% block content %}
   <div class="text-center py-4">
     <h1>{{ animal.nome_animal }}</h1>
