--- a/rumix/templates/rumix/index.html
+++ b/rumix/templates/rumix/index.html
@@ -1,5 +1,5 @@
 {% extends "rumix/base.html" %}
-{% block title %}Início - Rumix{% endblock %}
+{% block title %}Início | Rumix{% endblock %}
 {% load static %}
 {% load crispy_forms_filters %}
 {% block content %}
