--- a/rumix/templates/rumix/sobre.html
+++ b/rumix/templates/rumix/sobre.html
@@ -1,11 +1,9 @@
 {% extends "rumix/base.html" %}
 {% load static %}
-{% block title %}Sobre - Rumix{% endblock %}
+{% block title %}Sobre | Rumix{% endblock %}
 {% block content %}
-
   <section style="text-align:center; padding:2rem;">
-    <h1>{{ titulo }}</h1>
-       
+    <h1>{{ titulo }}</h1> 
   </section>
   <section>
   <p>
@@ -31,15 +29,12 @@
     <center>
         <h2>Contato</h2>
           <ul >
-
             <i class="bi bi-envelope-fill me-2">
             </i>Email: <a href="mailto:rumixcontato@gmail.com">rumixcontato@gmail.com</a>
               <br>
-
             <i class="bi bi-instagram">
             </i>Instagram: <a href="https://www.instagram.com/rumixadmrural/" target="_blank">@rumixadmrural</a>
               <br>
-
             <i class="bi bi-github">
             </i>    Github: <a href="https://github.com/MatheusFabSouza/Rumix" target="_blank">Github </a>
             <br>
