--- a/animais/templates/animais/form.html
+++ b/animais/templates/animais/form.html
@@ -1,9 +1,9 @@
 {% extends "rumix/base.html" %}
 {% load crispy_forms_filters %}
-{% block title %}{{ titulo|default:"Animal" }} — Rumix{% endblock %}
+{% block title %}{{ titulo|default:"Animal" }} | Rumix{% endblock %}
 {% block content %}
   <div class="panel mx-auto" style="max-width:700px;">
-    <h3 class="mb-3">{{ titulo|default:"Formulário de Animal" }}</h3>
+    <h3 class="mb-3">{{ titulo|default:"Form de Animal" }}</h3>
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
