--- a/fazendas/templates/fazendas/lista.html
+++ b/fazendas/templates/fazendas/lista.html
@@ -1,14 +1,22 @@
 {% extends "rumix/base.html" %}
-{% block title %}Fazendas - Rumix{% endblock %}
+{% block title %}Fazendas | Rumix{% endblock %}
 {% block content %}
-<h1>{{ titulo }}</h1>
-<ul>
-  {% for fazenda in object_list %}
-    <li>
-      <a href="{% url 'fazendas:detalhe' fazenda.pk %}">{{ fazenda.nome_fazenda }}</a>
-    </li>
-  {% empty %}
-    <li>Nenhuma fazenda cadastrada.</li>
-  {% endfor %}
-</ul>
+  <h1>Fazendas</h1>
+  <a href="{% url 'fazendas:criar' %}" class="btn btn-success mb-3">Nova Fazenda</a>
+  <div class="row g-3">
+    {% for fazenda in fazendas %}
+      <div class="col-md-4">
+        <div class="panel">
+          <h5>{{ fazenda.nome_fazenda }}</h5>
+          {% if fazenda.foto_fazenda %}
+            <img src="{{ fazenda.foto_fazenda.url }}" class="img-fluid rounded mb-2" style="max-height:140px; object-fit:cover;">
+          {% endif %}
+          <p class="text-muted">{{ fazenda.sobre_fazenda}}</p>
+          <a href="{% url 'fazendas:detalhe' fazenda.id %}" class="btn btn-sm btn-primary">Ver</a>
+        </div>
+      </div>
+    {% empty %}
+      <p>Nenhuma fazenda cadastrada.</p>
+    {% endfor %}
+  </div>
 {% endblock %}
